# nestor

./: .gitignore  Cargo.toml  LICENSE  README.md
nestor/: Cargo.toml
nestor-browser/: Cargo.toml  index.html  style.css
nestor-browser/src/: app.rs  display.rs  emulator.rs  lib.rs  main.rs  nametables.rs  ppu.rs  tauri.rs
nestor-desktop/: Cargo.toml
nestor-desktop/src/: main.rs  menu.rs
nestor-desktop/src/windows/: emulator.rs  mod.rs  nametables.rs  ppu.rs
nestor-sdl/: Cargo.toml
nestor-sdl/src/: main.rs
nestor-tauri/: Cargo.toml  tauri.conf.json
nestor-tauri/capabilities/: default.json
nestor-tauri/icons/: icon.icns
nestor-tauri/src/: lib.rs  main.rs
nestor-tauri/ui/: index.html  index.js
nestor/src/: bus.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  main.rs  mapper.rs  nes.rs  opcodes.rs  ppu.rs  rom.rs  trace.rs
nestor/src/mappers/: cnrom.rs  mod.rs  nrom.rs
nestor/src/ppu/: addr.rs  control.rs  frame.rs  mask.rs  palette.rs  scroll.rs  status.rs
src/: bus.rs  cartridge.rs  cpu.rs  joypad.rs  main.rs  mapper.rs  memory.rs  opcodes.rs  ppu.rs  tiles_viewer.rs  trace.rs
src/ppu/: mask.rs  mod.rs  sprite.rs
src/ppu/registers/: mask.rs
src/render/: frame.rs  mod.rs  palette.rs
