[package]
name = "nestor-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
nestor = { version = "0.1.0", path = "../nestor" }
gloo = "0.11.0"
wasm-bindgen = "0.2.92"
futures = "0.3.30"
fps_counter = { version = "3.0.0", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "Document",
    "Window",
    "KeyboardEvent",
    "FileList",
    "HtmlCollection",
]
