[package]
name = "nestor-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_app_v2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["default", "devtools"] }
serde = { version = "1" }
tauri-plugin-dialog = "2.0.0-rc.0"
nestor = { version = "0.1.0", path = "../nestor" }
nestor-browser = { version = "0.1.0", path = "../nestor-browser" }
