[package]
name = "nestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitflags = { version = "2.6.0", features = ["serde"] }
rand = "=0.8.5"
serde = { version = "1.0", features = ["derive"] }

[lints.clippy]
upper_case_acronyms = "allow"
